--- a/index.html
+++ b/index.html
@@ -1,89 +1,118 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Gallery</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+	<title>Gallery</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+	<!-- Wrapper -->
+		<div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="images/fulls/condominium.jpg" class="image"><img src="images/thumbs/condominiumthumb.jpg" alt="" /></a>
-							<h2><!-- Title for Image 1 --></h2>
-							<p><!-- Description for Image 1 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/villavallelonga.jpg" class="image"><img src="images/thumbs/villavallelongathumb.jpg" alt="" /></a>
-							<h2><!-- Title for Image 2 --></h2>
-							<p><!-- Description for Image 2 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/museum.jpg" class="image"><img src="images/thumbs/museumthumb.jpg" alt="" /></a>
-							<h2><!-- Title for Image 3 --></h2>
-							<p><!-- Description for Image 3 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/DosPlatanosSchoolEvening.png" class="image"><img src="images/thumbs/DosPlatanosSchoolEveningthumb.png" alt="" /></a>
-							<h2><!-- Title for Image 4 --></h2>
-							<p><!-- Description for Image 4 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/office.jpg" class="image"><img src="images/thumbs/officethumb.jpg" alt="" /></a>
-							<h2><!-- Title for Image 5 --></h2>
-							<p><!-- Description for Image 5 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/Render_6.png" class="image"><img src="images/thumbs/Render_6thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 6 --></h2>
-							<p><!-- Description for Image 6 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/Render_5.png" class="image"><img src="images/thumbs/Render_5thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 7 --></h2>
-							<p><!-- Description for Image 7 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/Render_4.png" class="image"><img src="images/thumbs/Render_4thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 8 --></h2>
-							<p><!-- Description for Image 8 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/5.png" class="image"><img src="images/thumbs/5thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 9 --></h2>
-							<p><!-- Description for Image 9 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/2.png" class="image"><img src="images/thumbs/2thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 10 --></h2>
-							<p><!-- Description for Image 10 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/1.png" class="image"><img src="images/thumbs/1thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 11 --></h2>
-							<p><!-- Description for Image 11 --></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/4.png" class="image"><img src="images/thumbs/4thumb.png" alt="" /></a>
-							<h2><!-- Title for Image 12 --></h2>
-							<p><!-- Description for Image 12 --></p>
-						</article>
-					</div>
+			<!-- Main -->
+			<div id="main">
+				<article class="thumb">
+					<a href="images/fulls/condominium.jpg" class="image" data-gallery="gallery1"><img src="images/thumbs/condominiumthumb.jpg" alt="" /></a>
+					<!-- Additional images for gallery -->
+					<a href="images/fulls/condominium2.jpg" class="image" data-gallery="gallery1" style="display:none;"></a>
+					<h2>Shoreline Heights</h2>
+				</article>
+				<article class="thumb">
+					<a href="images/fulls/villavallelonga.jpg" class="image" data-gallery="gallery2"><img src="images/thumbs/villavallelongathumb.jpg" alt="" /></a>
+					<!-- Additional images for gallery -->
+					<a href="images/fulls/villavallelongaBookstore.png" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/villavallelongamezzanine.png" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/villavallelongaMezzaninebelow.png" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/villavallelongaWorkshop.png" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<h2>Villavallelonga Heritage & Eco Tourism Centre</h2>
+				</article>
+                <article class="thumb">
+					<a href="images/fulls/museum.jpg" class="image" data-gallery="gallery2"><img src="images/thumbs/museumthumb.jpg" alt="" /></a>
+					<!-- Additional images for gallery -->
+					<a href="images/fulls/museumexterior1.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museumexterior2.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museumexterior3.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museumexterior4.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museuminterior1.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museuminterior2.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museuminterior3.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museuminterior4.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<a href="images/fulls/museuminterior5.jpg" class="image" data-gallery="gallery2" style="display:none;"></a>
+					<h2>National Museum of Contemporary History Slovenia</h2>
+                </article>
+                <article class="thumb">
+					<a href="images/fulls/dosplatanosreal.jpg" class="image" data-gallery="gallery2"><img src="images/thumbs/DosPlatanosSchoolEveningthumb.png" alt="" /></a>
+                    <!-- Additional images for gallery -->
+					<a href="images/fulls/DosPlatanosSchoolDay.png" class="image" data-gallery="gallery2" style="display:none;"></a>
+                    <a href="images/fulls/DosPlatanosSchoolEvening.png" class="image" data-gallery="gallery2" style="display:none;"></a>
+                    <h2>Dos Plátanos School</h2>
+                    <p>By Murmuro Architects. Located in Sintra, Portugal. Recreation render.</p>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/office.jpg" class="image"><img src="images/thumbs/officethumb.jpg" alt="" /></a>
+                    <h2>Office</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/Render_6.png" class="image"><img src="images/thumbs/Render_6thumb.png" alt="" /></a>
+                    <h2>Tranquility</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/Render_5.png" class="image"><img src="images/thumbs/Render_5thumb.png" alt="" /></a>
+                    <h2>Malibu</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/Render_4.png" class="image"><img src="images/thumbs/Render_4thumb.png" alt="" /></a>
+                    <h2>Entrance</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/5.png" class="image"><img src="images/thumbs/5thumb.png" alt="" /></a>
+                    <h2>Empty / Full</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/2.png" class="image"><img src="images/thumbs/2thumb.png" alt="" /></a>
+                    <h2>Kept</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/1.png" class="image"><img src="images/thumbs/1thumb.png" alt="" /></a>
+                    <h2>Green Room</h2>
+                </article>
+                <article class="thumb">
+                    <a href="images/fulls/4.png" class="image"><img src="images/thumbs/4thumb.png" alt="" /></a>
+                    <h2>Intrigue</h2>
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-	</body>
+	<script>
+		$(document).ready(function() {
+			// Initialize lightbox or gallery
+			$('.image').poptrox({
+				useBodyOverflow: false,
+				caption: function($a) { return $a.attr('title'); },
+				usePopupNav: true
+			});
+			
+			// Open the lightbox on thumbnail click
+			$('.thumb .image').click(function(e) {
+				e.preventDefault();
+				var gallery = $(this).data('gallery');
+				var $firstImage = $('.image[data-gallery="' + gallery + '"]').first();
+				if ($firstImage.length) {
+					$.poptrox.open($firstImage.attr('href'));
+				}
+			});
+		});
+	</script>
+
+</body>
 </html>
